# nes-emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: config.cmake
libraries/: CMakeLists.txt
source/: CMakeLists.txt
source/base/: CMakeLists.txt  color.hpp  iCpu.hpp  iDma.hpp  iMemory.hpp  iPpu.hpp  iRenderable.hpp  pixel.hpp  randomAccessMemory.hpp  register.hpp  slowMemory.cpp
source/cartridge/: CMakeLists.txt  cartridge.cpp  cartridge.hpp  cartridgeLoader.cpp  cartridgeLoader.hpp  inesHeader.cpp  inesHeader_1_0.cpp  inesHeader_1_0.hpp
source/cartridge/mappers/: CMakeLists.txt  iMapper.hpp  mapper0.cpp  mapper0.hpp
source/cpu/: CMakeLists.txt  addressing_modes.hpp  alu.cpp  alu.hpp  cpu.cpp  cpu.hpp  debugCpu.cpp  debugCpu.hpp  iClocked.hpp  memoryMapper.cpp  memoryMapper.hpp  operations.cpp  operations.hpp  randomAccessMemory.hpp  statusRegister.hpp
source/dma/: CMakeLists.txt  dma.cpp  dma.hpp
source/emulator/: CMakeLists.txt  app.cpp  app.hpp  clock.hpp  cpuRenderer.cpp  main.cpp  nes.cpp  nes.hpp  sdlController.cpp  sdlController.hpp  window.cpp  window.hpp
source/emulator/debug/: CMakeLists.txt  cpuRecorder.cpp  cpuRecorder.hpp  cpuRenderer.cpp  cpuRenderer.hpp  cpuStackFrame.hpp  debugCpu.cpp  debugCpu.hpp  debugDma.cpp  debugDma.hpp  debugPpu.cpp  debugPpu.hpp  debugWindow.cpp  debugWindow.hpp  decompiler.cpp  decompiler.hpp  nametable.cpp  nametable.hpp  palette.cpp  palette.hpp  paletteRenderer.cpp  paletteRenderer.hpp  patternTable.cpp  patternTable.hpp  spriteTable.cpp  spriteTable.hpp
source/input/: CMakeLists.txt  controller.cpp  controller.hpp  controllerPort.hpp  iInput.hpp
source/memory/: CMakeLists.txt  memoryMapper.cpp  memoryMapper.hpp  ppuMemoryMapper.cpp  ppuMemoryMapper.hpp  randomAccessMemory.cpp  randomAccessMemory.hpp  slowMemory.cpp  slowMemory.hpp
source/memory/cartridge/: cartridge.cpp  cartridge.hpp  cartridgeLoader.cpp  cartridgeLoader.hpp  inesHeader.cpp  inesHeader.hpp  inesHeader_2_0.cpp  inesHeader_2_0.hpp
source/memory/cartridge/mappers/: iMapper.hpp  mapper0.cpp  mapper0.hpp
source/memory/debugging/: patternTable.cpp  patternTable.hpp
source/platform/: CMakeLists.txt  SdlAlternateRenderTarget.cpp  SdlAlternateRenderTarget.hpp  iAlternateRenderTarget.hpp  iRenderer.hpp  iWindow.hpp  platformBase.hpp  sdlRenderer.cpp  sdlRenderer.hpp  sdlWindow.cpp  sdlWindow.hpp
source/platform/window/: CMakeLists.txt  iSubWindow.hpp  iWindow.hpp  sdlSubWindow.cpp  sdlSubWindow.hpp  sdlWindow.cpp  sdlWindow.hpp
source/ppu/: CMakeLists.txt  palette.cpp  palette.hpp  paletteViewer.hpp  ppu.cpp  ppu.hpp  ppuCtrlRegister.hpp  ppuMemoryMapper.cpp  ppuMemoryMapper.hpp  systemPalette.cpp  systemPalette.hpp
tests/: CMakeLists.txt  catch_main.cpp  mockMemory.cpp  mockMemory.hpp
tests/cpu/: arithmetic_operations.cpp  branch_operations.cpp  load_operations.cpp  logical_operations.cpp  shift_operations.cpp  stack_operations.cpp  status_register_operations.cpp  store_operations.cpp  subroutine_operations.cpp  transfer_operations.cpp
tests/mappers/: CMakeLists.txt  mapper0.cpp
tools/: CMakeLists.txt
tools/decompiler/: CMakeLists.txt  app.cpp  app.hpp  codeViewer.cpp  codeViewer.hpp  decompiler.cpp  decompiler.hpp  main.cpp  memoryWrapper.hpp  operations.hpp
tools/pattern_table_viewer/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  patternTable.cpp  patternTable.hpp  window.cpp  window.hpp
